kube/_calico_policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: <<please set>>
spec:
  podSelector:
    matchLabels: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deployment-manager-access
  namespace: <<please set>>
spec:
  podSelector:
    matchLabels:
      app: update-manager
  ingress:
    - ports:
      - protocol: TCP
        port: 9000
      from:
      - namespaceSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            name: kube-system
      ports:
      - protocol: UDP
        port: 53
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
      - protocol: TCP
        port: 443
      - protocol: TCP
        port: 80
